--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,6 @@
     "@algolia/autocomplete-core": "^1.13.0",
     "@aws-sdk/client-s3": "^3.472.0",
     "@aws-sdk/s3-request-presigner": "^3.472.0",
-    "@clerk/nextjs": "^4.29.3",
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
     "@hono/swagger-ui": "^0.2.1",
@@ -54,6 +53,7 @@
     "@types/swagger-ui-react": "^4.18.3",
     "@types/uuid": "^9.0.7",
     "acorn": "^8.11.2",
+    "caniuse-lite": "^1.0.30001643",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -116,6 +116,7 @@
     "dotenv": "^16.3.1",
     "drizzle-kit": "^0.20.6",
     "eslint": "8.34.0",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "postgres": "^3.4.3",
     "sharp": "^0.33.1",
